[project]
name = "lorenze_chatbot_test"
version = "0.1.0"
description = "lorenze-chatbot-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.8a4"
]

[project.scripts]
kickoff = "lorenze_chatbot_test.main:kickoff"
run_crew = "lorenze_chatbot_test.main:kickoff"
plot = "lorenze_chatbot_test.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
